; ModuleID = '/home/carl/AnghaBench/git/extr_trace.c_trace_verbatim.c'
source_filename = "/home/carl/AnghaBench/git/extr_trace.c_trace_verbatim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_key = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @trace_verbatim(%struct.trace_key* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.trace_key*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.trace_key* %0, %struct.trace_key** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.trace_key*, %struct.trace_key** %4, align 8
  %8 = call i32 @trace_want(%struct.trace_key* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %3
  br label %16

11:                                               ; preds = %3
  %12 = load %struct.trace_key*, %struct.trace_key** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @trace_write(%struct.trace_key* %12, i8* %13, i32 %14)
  br label %16

16:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @trace_want(%struct.trace_key*) #1

declare dso_local i32 @trace_write(%struct.trace_key*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
